--- a/teaming/index.html
+++ b/teaming/index.html
@@ -55,7 +55,7 @@
               <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br> <a
                 href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
               <a href="http://casy.cse.sc.edu/ultra/DataExplorer/" target="_blank"><b>[Tool Website]</b></a> <a
-                href="http://casy.cse.sc.edu/ultra/DataExplorer/teaming.html" target="_blank"><b>[Demo]</b></a>
+                href="http://casy.cse.sc.edu/Matching/" target="_blank"><b>[Demo]</b></a>
               <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
               <div class="row">
