--- a/teaming/index.html
+++ b/teaming/index.html
@@ -79,10 +79,9 @@
                 href="http://casy.cse.sc.edu/Matching/" target="_blank"><b>[Demo]</b></a>
               <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
-              <img class="mySlides" src="img_snowtops.jpg">
-              <img class="mySlides" src="img_lights.jpg">
-              <img class="mySlides" src="img_mountains.jpg">
-              <img class="mySlides" src="img_forest.jpg">
+              <img class="mySlides" src="images/system_architecture.png">
+              <img class="mySlides" src="images/system_architecture2.png">
+              <img class="mySlides" src="images/ultra-poster.png">
               <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
               <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
             </li>
