Adding an overlay

--- a/teaming/index.html
+++ b/teaming/index.html
@@ -3,17 +3,13 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
   <title>AI Teaming</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
-  
+
 </head>
 
 <body class="container">
-
 
   <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
@@ -65,19 +61,19 @@
                 <div class="mySlides fade">
                   <div class="numbertext">1 / 3</div>
                   <img src="images/ultra-poster.png" style="width:60%; height: 450px;">
-                  <div class="text">Caption Text</div>
+                  <div class="overlay">My Name is John</div>
                 </div>
 
                 <div class="mySlides fade">
                   <div class="numbertext">2 / 3</div>
                   <img src="images/system_architecture.png" style="width:60%; height: 450px;">
-                  <div class="text">Caption Two</div>
+                  <div class="overlay">My Name is John</div>
                 </div>
 
                 <div class="mySlides fade">
                   <div class="numbertext">3 / 3</div>
                   <img src="images/system_architecture2.png" style="width:60%; height: 450px;">
-                  <div class="text">Caption Three</div>
+                  <div class="overlay">My Name is John</div>
                 </div>
               </center>
             </div>
