--- a/teaming/index.html
+++ b/teaming/index.html
@@ -57,53 +57,63 @@
             </li>
             <br>
             <div class="slideshow-container">
-              <center>
-                <div class="mySlides fade">
-                  <div class="numbertext">1 / 3</div>
-                  <img src="images/ultra-poster.png" style="width:60%; height: 450px;">
-                  <div class="overlay">My Name is John</div>
-                </div>
-
-                <div class="mySlides fade">
-                  <div class="numbertext">2 / 3</div>
-                  <img src="images/system_architecture.png" style="width:60%; height: 450px;">
-                  <div class="overlay">My Name is John</div>
-                </div>
-
-                <div class="mySlides fade">
-                  <div class="numbertext">3 / 3</div>
-                  <img src="images/system_architecture2.png" style="width:60%; height: 450px;">
-                  <div class="overlay">My Name is John</div>
-                </div>
-              </center>
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="images/ultra-poster.png" style="width:60%; height:450px">
+                <br>
+                <div class="text">A poster of ULTRA</div>
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="images/system_architecture.png" style="width:60%; height:450px">
+                <br>
+                <div class="text">ULTRA System Architecture</div>
+              </div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="images/system_architecture2.png" style="width:60%; height:450px">
+                <br>
+                <div class="text">New York, USA</div>
+              </div>
             </div>
             <br>
             <div style="text-align:center">
-              <span class="dot"></span>
-              <span class="dot"></span>
-              <span class="dot"></span>
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
+              <span class="dot" onclick="currentSlide(3)"></span>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
             <script>
-              let slideIndex = 0;
-              showSlides();
-
-              function showSlides() {
-                let i;
-                let slides = document.getElementsByClassName("mySlides");
-                let dots = document.getElementsByClassName("dot");
-                for (i = 0; i < slides.length; i++) {
+              var slideIndex = 1;
+              showSlides(slideIndex);
+              function plusSlides(n) {
+                showSlides(slideIndex += n);
+              }
+              function currentSlide(n) {
+                showSlides(slideIndex = n);
+              }
+              function showSlides(n) {
+                var i;
+                var slides = document.getElementsByClassName("mySlides");
+                var dots = document.getElementsByClassName("dot");
+                if(n > slides.length) {
+                  slideIndex = 1
+                }
+                if(n < 1) {
+                  slideIndex = slides.length
+                }
+                for(i = 0; i < slides.length; i++) {
                   slides[i].style.display = "none";
                 }
-                slideIndex++;
-                if (slideIndex > slides.length) { slideIndex = 1 }
-                for (i = 0; i < dots.length; i++) {
+                for(i = 0; i < dots.length; i++) {
                   dots[i].className = dots[i].className.replace(" active", "");
                 }
                 slides[slideIndex - 1].style.display = "block";
                 dots[slideIndex - 1].className += " active";
-                setTimeout(showSlides, 2000); // Change image every 2 seconds
               }
             </script>
+  
           </ul>
           <p><i><b>Additional Tools</b></i></p>
           <ul>
