--- a/teaming/index.html
+++ b/teaming/index.html
@@ -60,20 +60,19 @@
               <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
                 <img src="images/ultra-poster.png" style="width:60%; height:450px">
-                <br>
-                <div class="text">A poster of ULTRA</div>
+                <br><br><br>
+                <div class="text">A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis.)</div>
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
                 <img src="images/system_architecture.png" style="width:60%; height:450px">
-                <br>
-                <div class="text">ULTRA System Architecture</div>
+                <br><br><br><div class="text">System architecure of ULTRA</div>
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
                 <img src="images/system_architecture2.png" style="width:60%; height:450px">
-                <br>
-                <div class="text">New York, USA</div>
+                <br><br><br><div class="text"> Team-building setup with users who can be administrators or potential team participants. A trusted team is one where all stakeholders are convinced
+                  that the right members from those available have been selected on the needs of the call for unknown success in future.</div>
               </div>
             </div>
             <br>
