--- a/teaming/index.html
+++ b/teaming/index.html
@@ -37,7 +37,7 @@
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
                 target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a></i>
             <br>
-            We introduce an emerging AI-based approach and prototype system for assisting team formation when
+            We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for assisting team formation when
             researchers respond to calls for proposals from funding agencies. This is an instance of the general problem
             of building teams when demand opportunities come periodically and potential members may vary over time. The
             novelties of our approach are that we: (a) extract technical skills needed about researchers and calls from
@@ -61,18 +61,17 @@
                 <div class="numbertext">1 / 3</div>
                 <img src="images/ultra-poster.png" style="width:60%; height:450px">
                 <br><br><br>
-                <div class="text">A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis.)</div>
+                <div class="text">A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).</div>
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
                 <img src="images/system_architecture.png" style="width:60%; height:450px">
-                <br><br><br><div class="text">System architecure of ULTRA</div>
+                <br><br><br><div class="text">System architecure of ULTRA.</div>
               </div>
               <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
                 <img src="images/system_architecture2.png" style="width:60%; height:450px">
-                <br><br><br><div class="text"> Team-building setup with users who can be administrators or potential team participants. A trusted team is one where all stakeholders are convinced
-                  that the right members from those available have been selected on the needs of the call for unknown success in future.</div>
+                <br><br><br><div class="text"> Team-building setup with users who can be administrators or potential team participants. A trusted team is one where all stakeholders are convinced that the right members from those available have been selected on the needs of the call for unknown success in future.</div>
               </div>
             </div>
             <br>
