--- a/teaming/index.html
+++ b/teaming/index.html
@@ -51,7 +51,7 @@
               <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br> <a
                 href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
               <a href="http://casy.cse.sc.edu/ultra/DataExplorer/" target="_blank"><b>[Tool Website]</b></a> <a
-                href="http://casy.cse.sc.edu/Matching/" target="_blank"><b>[Demo]</b></a>
+                href="http://casy.cse.sc.edu/matching/" target="_blank"><b>[Demo]</b></a>
               <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
             </li>
@@ -121,7 +121,7 @@
               <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a> <a
                 href="http://casy.cse.sc.edu/kite" target="_blank"><b>[Demo]</b></a>
               <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-              <br>
+              <br><br>
               <center><img src="./images/kite.png" height="200" width="400">
                 <figcaption>Figure 3: Using KITE</figcaption>
               </center>
@@ -130,7 +130,7 @@
             <li>[2022] A Text-to-Classification Mapper (Using ACM/JEL Subject Ontology Codes).<br>
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a> <a
                 href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Demo]</b></a>
-              <br>
+              <br><br>
               <center><img src="./images/ultra_mapper.png" height="200" width="400">
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
               </center>
