--- a/teaming/index.html
+++ b/teaming/index.html
@@ -62,14 +62,17 @@
               <div class="slide-container">
                 <div class="slide fade">
                   <img src='images/ultra_poster.png' alt='' height="500px">
-                </div>
-                <div class="slide fade">
-                  <img src='images/ultra_system_architecture.png' alt='' height="500px">
+                  <figcaption>A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).</figcaption>
                 </div>
                 <div class="slide fade">
                   <img src='images/ultra_teaming_setup.png' alt='' height="500px">
+                  <figcaption>ULTRA teaming setup with users who can be administrators or potential team participants. A trusted team is one where all stakeholders are convinced
+                    that the right members from those available have been selected on the needs of the call for unknown success in future.</figcaption>
                 </div>
-
+                <div class="slide fade">
+                  <img src='images/ultra_system_architecture.png' alt='' height="500px">
+                  <figcaption>System architecture of ULTRA.</figcaption>
+                </div>
                 <a href="#" class="prev" title="Previous">&#10094</a>
                 <a href="#" class="next" title="Next">&#10095</a>
               </div>
@@ -193,7 +196,7 @@
                 href="http://casy.cse.sc.edu/kite" target="_blank"><b>[Demo]</b></a>
               <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
-              <center><img src="./images/kite.png" height="200" width="400">
+              <center><img src="./images/kite.png" height="200" width="60%"><br>
                 <figcaption>Figure 3: Using KITE</figcaption>
               </center>
             </li>
@@ -202,7 +205,7 @@
               <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a> <a
                 href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Demo]</b></a>
               <br><br>
-              <center><img src="./images/ultra_mapper.png" height="200" width="400">
+              <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
               </center>
             </li>
