--- a/teaming/index.html
+++ b/teaming/index.html
@@ -62,12 +62,15 @@
               <div class="slide-container">
                 <div class="slide fade">
                   <img src='images/ultra_poster.png' alt='' height="500px">
-                  <figcaption>A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).</figcaption>
+                  <figcaption>A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
+                    <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).</figcaption>
                 </div>
                 <div class="slide fade">
                   <img src='images/ultra_teaming_setup.png' alt='' height="500px">
-                  <figcaption>ULTRA teaming setup with users who can be administrators or potential team participants. A trusted team is one where all stakeholders are convinced
-                    that the right members from those available have been selected on the needs of the call for unknown success in future.</figcaption>
+                  <figcaption>ULTRA teaming setup with users who can be administrators or potential team participants. A
+                    trusted team is one where all stakeholders are convinced
+                    that the right members from those available have been selected on the needs of the call for unknown
+                    success in future.</figcaption>
                 </div>
                 <div class="slide fade">
                   <img src='images/ultra_system_architecture.png' alt='' height="500px">
