--- a/teaming/index.html
+++ b/teaming/index.html
@@ -30,10 +30,9 @@
             AI Teaming and Fairness
           </h2>
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span><br>
-            <i><b>Collaborators: </b>AIISC - University of South Carolina (USA), Tallinn University of Technology
-              (Estonia)</i>
+            <i><b>Collaborators: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
             <br>
-            <i><b>Advisors: </b><a target="_blank"
+            <i><b>Investigators: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
                 target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a></i>
             <br>
