Team, investigators, advisors

--- a/teaming/index.html
+++ b/teaming/index.html
@@ -30,11 +30,13 @@
             AI Teaming and Fairness
           </h2>
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span><br>
-            <i><b>Collaborators: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
+            <i><b>Team: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
             <br>
             <i><b>Investigators: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
                 target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a></i>
+            <br>
+            <i><b>Advisors: </b><a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael Matthews</a>, <a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul Ziehl</a>, <a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael Huhns</a>, <a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle McElwain</a></i>
             <br>
             We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
             from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
@@ -62,7 +64,8 @@
                 <div class="slide fade">
                   <img src='images/ultra_poster.png' alt='' height="550px">
                   <figcaption>A poster of ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam
-                    <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).</figcaption>
+                    <b><u>B</u></b>uilder from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis).
+                  </figcaption>
                 </div>
                 <div class="slide fade">
                   <img src='images/ultra_teaming_setup.png' alt='' height="550px">
