--- a/teaming/index.html
+++ b/teaming/index.html
@@ -23,13 +23,12 @@
 
       <tr style="padding:0px">
         <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-
           <h2 style="display:flex;align-items:center;">
             <span
               style="background-color: aqua ;height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
             AI Teaming and Fairness
           </h2>
-          <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span><br>
+                    <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span> - <span style="color:red; font-weight:bold;">Click <u><a target="_black" href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey. Feedback is being collected! [IRB# Pro00127449.]</span><br>
             <i><b>Team: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
             <br>
             <i><b>Investigators: </b><a target="_blank"
@@ -48,6 +47,7 @@
             prototype solution based on matching and teaming based on constraints, (c) describe initial feedback about
             system from researchers at a University to deploy, and (d) create and publish a dataset that others can use.
           </p>
+          <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3) and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
           <p><i><b>Representative Publications</b></i></p>
           <ul>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
