--- a/teaming/index.html
+++ b/teaming/index.html
@@ -28,14 +28,25 @@
               style="background-color: aqua ;height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
             AI Teaming and Fairness
           </h2>
-                    <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span> - <span style="color:red; font-weight:bold;">Click <u><a target="_black" href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey. Feedback is being collected! [IRB# Pro00127449.]</span><br>
+          <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span> -
+            <span style="color:red; font-weight:bold;">Click <u><a target="_black"
+                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey. Feedback is being
+              collected! [IRB# Pro00127449.]</span><br>
             <i><b>Team: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
             <br>
             <i><b>Investigators: </b><a target="_blank"
                 href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
                 target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a></i>
             <br>
-            <i><b>Advisors: </b><a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael Matthews</a>, <a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul Ziehl</a>, <a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael Huhns</a>, <a target="_blank" href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle McElwain</a></i>
+            <i><b>Advisors: </b><a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
+                Matthews</a>, <a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
+                Ziehl</a>, <a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
+                Huhns</a>, <a target="_blank"
+                href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
+                McElwain</a></i>
             <br>
             We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
             from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
@@ -47,7 +58,8 @@
             prototype solution based on matching and teaming based on constraints, (c) describe initial feedback about
             system from researchers at a University to deploy, and (d) create and publish a dataset that others can use.
           </p>
-          <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3) and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
+          <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3)
+            and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
           <p><i><b>Representative Publications</b></i></p>
           <ul>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
@@ -70,8 +82,8 @@
                 <div class="slide fade">
                   <img src='images/ultra_teaming_setup.png' alt='' height="550px">
                   <figcaption>ULTRA teaming setup with users who can be administrators or potential team participants. A
-                    trusted team is one where all stakeholders are convinced
-                    that the right members from those available have been selected on the needs of the call for unknown
+                    trusted team is one where all stakeholders are convinced that the right members from those available
+                    have been selected on the needs of the call for unknown
                     success in future.</figcaption>
                 </div>
                 <div class="slide fade">
