rating page update

--- a/rating_page/index.html
+++ b/rating_page/index.html
@@ -92,8 +92,13 @@
                   </td>
               </tr>
             </td> 
-
-          </tr>
+            </tr>
+            <br><br>
+            <tr style="padding: 0px">
+              <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+                <h3>More papers on 'Rating of AI Systems'<br><a href="https://sites.google.com/site/biplavsrivastava/research-1/trustedai?authuser=0#h.useljqp3rw7i" target="_blank"><b>[Click here]</b></a></h3>
+              </td> 
+            </tr>
 
         </tbody>
     </table>
