--- a/teaming/index.html
+++ b/teaming/index.html
@@ -220,8 +220,7 @@
             </li>
             <br>
             <li>[2022] A Text-to-Classification Mapper (Using ACM/JEL Subject Ontology Codes).<br>
-              <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a> <a
-                href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Demo]</b></a>
+              <a href="http://casy.cse.sc.edu/mapper/" target="_blank"><b>[Tool Website]</b></a> 
               <br><br>
               <center><img src="./images/ultra_mapper.png" height="200" width="400"><br>
                 <figcaption>Figure 4: Text-to-Classification Demo</figcaption>
