--- a/teaming/index.html
+++ b/teaming/index.html
@@ -211,7 +211,7 @@
                 target="_blank"><b>[Paper]</b></a>
                 <a href="https://github.com/BunnyTeja/Text-Visualization" target="_blank"><b>[GitHub]</b></a> 
                 <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a> 
-              
+                <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank"><b>[Demo Video]</b></a> 
               <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
               <center><img src="./images/kite.png" height="200" width="60%"><br>
