--- a/teaming/index.html
+++ b/teaming/index.html
@@ -206,12 +206,14 @@
           </ul>
           <p><i><b>Additional Tools</b></i></p>
           <ul>
-            <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br> <a
+            <li>[2022] KITE - An Unsupervised, Effective and Inclusive Approach for Textual Content Exploration.<br> 
+              <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a> 
+                <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank"><b>[Demo Video]</b></a> 
+              <a
                 href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf"
                 target="_blank"><b>[Paper]</b></a>
                 <a href="https://github.com/BunnyTeja/Text-Visualization" target="_blank"><b>[GitHub]</b></a> 
-                <a href="http://casy.cse.sc.edu/kite/" target="_blank"><b>[Tool Website]</b></a> 
-                <a href="https://clipchamp.com/watch/oPT2b3oHOAD" target="_blank"><b>[Demo Video]</b></a> 
+                
               <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
               <center><img src="./images/kite.png" height="200" width="60%"><br>
