--- a/teaming/index.html
+++ b/teaming/index.html
@@ -63,11 +63,13 @@
           <p><i><b>Representative Publications</b></i></p>
           <ul>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
-              <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br> <a
-                href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
+              <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br> 
+              
               <a href="http://casy.cse.sc.edu/ultra/DataExplorer/" target="_blank"><b>[Tool Website]</b></a> <a
-                href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Demo]</b></a>
-              <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Tool Demo (+Survey)]</b></a>
+                <a
+                href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
+                <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
             </li>
             <br>
