--- a/_pages/papers.html
+++ b/_pages/papers.html
@@ -28,7 +28,7 @@ author_profile: true
         <span>Bharath Muppasani, Vishal Pallagani, Kausik Lakkaraju, Shuge Lei, Biplav Srivastava, Brett Robertson, Andrea Hickerson, Vignesh Narayanan, On Safe and Usable Chatbots for Promoting Voter Participation, AAAI 2023 Workshop on AI for Credible Elections, On Arxiv at: <a href="https://arxiv.org/abs/2212.11219">https://arxiv.org/abs/2212.11219</a> [Chatbot, Voter Engagement] - <a href="https://arxiv.org/pdf/2212.11219.pdf">[PDF]</a></span>
          </a></li>
       <li><a style="text-decoration: none;color: black;"><h3><span style="color:black">2023-3</span></h3>
-        <span>Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta, Advances in Automatically Rating the Trustworthiness of Text Processing Services, AAAI Spring Symposium, San Francisco, 2023 [AI Rating, Trust]</span>
+        <span>Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta, Advances in Automatically Rating the Trustworthiness of Text Processing Services, AAAI Spring Symposium, San Francisco, 2023 [AI Rating, Trust] - <a href="https://arxiv.org/pdf/2302.09079.pdf">[PDF]</a></span>
          </a></li>
       <li><a style="text-decoration: none;color: black;"><h3><span style="color:black">2022-1</span></h3>
         <span>Kausik Lakkaraju, Vinamra Palaiyya, Sai Teja Paladi, Chinmayi Appajigowda, Biplav Srivastava, Lokesh Johri, Data-based Insights for the Masses: Scaling Natural Language Querying to Middleware Data", DASFAA-2022, (April 2022) [IoT - power and router usage] - <a href="https://vimeo.com/651270271">Video</a>, <a href="https://dl.acm.org/doi/abs/10.1007/978-3-031-00129-1_49">[PDF]</a></span>
