rubiks cube project page

--- a/power_page/index.html
+++ b/power_page/index.html
@@ -76,9 +76,10 @@
               
                 <p><i><b>Representative Publications</b></i></p>
                 <ul>
-                  <li>A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS IoT-based Sensors<br> <a href="https://arxiv.org/pdf/2209.00987.pdf" target="_blank"><b>[Paper]</b></a>
+                  <li>A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS IoT-based Sensors<br> 
+                    <a href="https://arxiv.org/pdf/2209.00987.pdf" target="_blank"><b>[Paper]</b></a>
                     <a href="https://github.com/ai4society/PowerIoT-State-Identification" target="_blank" type="text/plain"><b>[GitHub Respository]</b></a>
-                    <a href="file:///Users/bittu/Desktop/AI4S project/projects/bib/state-power.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                    <a href="bib/state-power.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   </li>
                 </ul>
                 <tr style="padding:0px">
