--- a/rubiks_cube/index.html
+++ b/rubiks_cube/index.html
@@ -55,13 +55,14 @@
                     </li>
                     <li>Demonstration Video - <a href="https://www.youtube.com/watch?v=tp9Z0yppSJw&ab_channel=AIInstituteatUofSC-%23AIISC" target="_blank"><b>[Video]</b></a>
                     </li>
+                    <br>
                     <!-- <tr style="padding:0px">
                       <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                           <img src="images/shuffled_cube_new.png" style="max-width:50%; display: block; margin: 0 auto;">
                       </td>
                     </tr> -->
                     <div class="video-container" style="display: flex; justify-content: center;">
-                      <iframe  width="560" height="315" src="https://www.youtube.com/watch?v=tp9Z0yppSJw&ab_channel=AIInstituteatUofSC-%23AIISC" title="Solving the Rubik's Cube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/L90reK3_fk4" title="Solving the Rubik’s Cube with a PDDL Planner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     
                   </ul>
@@ -69,7 +70,7 @@
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <img src="images/shuffled_cube_new.png" style="max-width:50%; display: block; margin: 0 auto;">
                     </td>
-                </tr>
+                  </tr>
               </td> 
 
             </tr>
