update rubiks cube

--- a/rubiks_cube/index.html
+++ b/rubiks_cube/index.html
@@ -53,7 +53,7 @@
                     <li>Solving the Rubik’s Cube with a PDDL Planner - <a href="papers/Rubik_s_Cube_IJCAI_Demo.pdf" target="_blank"><b>[Paper]</b></a>
                       <!-- <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=4jmlBaYAAAAJ&citation_for_view=4jmlBaYAAAAJ:K4-iKlO5MD4C" target="_blank" type="text/plain"><b>[BibTex]</b></a> -->
                     </li>
-                    <li>Demonstration Video - <a href="https://www.youtube.com/watch?v=tp9Z0yppSJw&ab_channel=AIInstituteatUofSC-%23AIISC" target="_blank"><b>[Video]</b></a>
+                    <li>Demonstration Video - <a href="https://www.youtube.com/watch?v=L90reK3_fk4&ab_channel=BharathChandra" target="_blank"><b>[Video]</b></a>
                     </li>
                     <br>
                     <!-- <tr style="padding:0px">
