--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -214,15 +214,20 @@ author_profile: true
           
 <div style="display:flex;justify-content: center;gap:15px;">
   <div style="flex:1">
-    <img src='/images/user-login.png' height="55px" width="485px">
-  </div>
-  <div style="flex:1">
-    <h3 class="card-text">ULTRA: Data-driven Approach for Recommending Team Formation in Response to Proposal Calls. <font color=blue>Neuro-Symbolic Methods</font></h3>
-    <p><a href="http://casy.cse.sc.edu/ultra/DataExplorer/" target="_blank" rel="noopener noreferrer">Website</a> </p>  
-      <br>
-    <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
-  </div>
+ <iframe  src="https://www.youtube.com/watch?v=8MUtxsfVNIU" title="ULTRA - System Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  </div>
+ <div style="flex:1">
+   <h3 class="card-text">ULTRA: A <b>U</b>niversity-<b>L</b>ead <b>T</b>eam Builder from <b>R</b>FPs and <b>A</b>nalysis <font color=blue>Neuro-Symbolic Methods</font></h3>
+   <p><b>Paper :</b> <a href="https://arxiv.org/pdf/2201.05646.pdf" target="_blank" rel="noopener noreferrer">ULTRA: Data-driven Approach for Recommending Team Formation in Response to Proposal Calls. </a> </p>  
+
+   <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Tool Website]</b></a>
+   <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank"><b>[Demo Video]</b></a>
+   <a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
+   <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+   
+   <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
+ </div>
+</div>
  
  
  <br>
