Update demos.html - fix ultra's embed code

--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -214,7 +214,7 @@ author_profile: true
           
 <div style="display:flex;justify-content: center;gap:15px;">
   <div style="flex:1">
- <iframe  src="https://www.youtube.com/watch?v=8MUtxsfVNIU" title="ULTRA - System Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="964" height="542" src="https://www.youtube.com/embed/8MUtxsfVNIU" title="Demo of ULTRA Tool: Team Recommendation for Researchers for Responding to Calls for Proposals" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  </div>
  <div style="flex:1">
    <h3 class="card-text">ULTRA: A <b>U</b>niversity-<b>L</b>ead <b>T</b>eam Builder from <b>R</b>FPs and <b>A</b>nalysis <font color=blue>Neuro-Symbolic Methods</font></h3>
