--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -218,12 +218,11 @@ author_profile: true
  </div>
  <div style="flex:1">
    <h3 class="card-text">ULTRA: A <b>U</b>niversity-<b>L</b>ead <b>T</b>eam Builder from <b>R</b>FPs and <b>A</b>nalysis <font color=blue>Neuro-Symbolic Methods</font></h3>
-   <p><b>Paper :</b> <a href="https://arxiv.org/pdf/2201.05646.pdf" target="_blank" rel="noopener noreferrer">ULTRA: Data-driven Approach for Recommending Team Formation in Response to Proposal Calls. </a> </p>  
+   <p><b>Paper :</b> <a href="https://arxiv.org/pdf/2201.05646" target="_blank" rel="noopener noreferrer">ULTRA: Data-driven Approach for Recommending Team Formation in Response to Proposal Calls. </a> </p>  
 
-   <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Tool Website]</b></a>
-   <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank"><b>[Demo Video]</b></a>
-   <a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
-   <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+   <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">[Tool Website]</a>
+   <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank">[Demo Video]</b></a>
+   <a href="../teaming/bib/ultra.txt" target="_blank" type="text/plain">[BibTex]</a>
    
    <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
  </div>
