--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -218,6 +218,7 @@ author_profile: true
  </div>
  <div style="flex:1">
    <h3 class="card-text">ULTRA: A <b>U</b>niversity-<b>L</b>ead <b>T</b>eam Builder from <b>R</b>FPs and <b>A</b>nalysis <font color=blue>Neuro-Symbolic Methods</font></h3>
+   <p>We introduce ULTRA, a novel AI-based system for assisting team formation when researchers respond to calls for proposals from funding agencies.</p>
    <a href="https://ieeexplore.ieee.org/abstract/document/10031089" target="_blank" rel="noopener noreferrer">[Paper]</a>
    <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank">[Demo Video]</b></a>
    <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">[Tool]</a>
