--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -217,7 +217,7 @@ author_profile: true
     <iframe width="964" height="542" src="https://www.youtube.com/embed/8MUtxsfVNIU" title="Demo of ULTRA Tool: Team Recommendation for Researchers for Responding to Calls for Proposals" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  </div>
  <div style="flex:1">
-   <h3 class="card-text">ULTRA: A <b>U</b>niversity-<b>L</b>ead <b>T</b>eam Builder from <b>R</b>FPs and <b>A</b>nalysis <font color=blue>(Neuro-Symbolic Methods)</font></h3>
+   <h3 class="card-text">ULTRA: A <b>U</b>niversity-<b>L</b>ead <b>T</b>eam Builder from <b>R</b>FPs and <b>A</b>nalysis. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
    <p>We introduce ULTRA, a novel AI-based system for assisting team formation when researchers respond to calls for proposals from funding agencies.</p>
    <a href="https://ieeexplore.ieee.org/abstract/document/10031089" target="_blank" rel="noopener noreferrer">[Paper]</a>
    <a href="https://youtu.be/8MUtxsfVNIU/" target="_blank">[Demo Video]</b></a>
@@ -256,7 +256,7 @@ author_profile: true
  
              </div>
              <div style="flex:1">
-               <h3 class="card-text">ALLURE: A Multi-modal Guided Environment for Helping Children Learn to Solve a Rubik’s Cube <font color=blue>(Neuro-Symbolic Methods)</font></h3>
+               <h3 class="card-text">ALLURE: A Multi-modal Guided Environment for Helping Children Learn to Solve a Rubik’s Cube. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
                <p><b>Paper:</b> <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21722" target="_blank" rel="noopener noreferrer">ALLURE: A Multi-Modal Guided Environment for Helping Children Learn to Solve a Rubik’s Cube with Automatic Solving and Interactive Explanations</a> </p>  
                
                <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
