--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -237,11 +237,9 @@ author_profile: true
              <iframe  src="https://www.youtube.com/embed/X2l7eW6dyBc" title="PRUDENT ICAPS Demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
              </div>
              <div style="flex:1">
-               <h3 class="card-text">PRUDENT: A generic dialog agent for information retrieval based on automated planning within a reinforcement learning platform. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
-               <p><b>Paper:</b> <a href="https://prl-theworkshop.github.io/prl2021/papers/PRL2021_paper_28.pdf" target="_blank" rel="noopener noreferrer">A Generic Dialog Agent for Information Retrieval Based on Automated Planning
-                Within a Reinforcement Learning Platform</a> </p>  
-
-                <p><a href="https://github.com/ai4society/PRUDENT" target="_blank" rel="noopener noreferrer">Github</a> </p>  
+               <h3 class="card-text">PRUDENT: A Generic Dialog Agent for Information Retrieval Based on Automated Planning Within a Reinforcement Learning Platform. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
+               <a href="https://prl-theworkshop.github.io/prl2021/papers/PRL2021_paper_28.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>
+               <a href="https://github.com/ai4society/PRUDENT" target="_blank" rel="noopener noreferrer">[Github]</a>  
                
                <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
              </div>
