--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -265,7 +265,7 @@ author_profile: true
   <div style="flex:1">
     <h3 class="card-text">KITE: An Unsupervised, Effective and Inclusive Approach for
       Textual Content Exploration</h3>
-    <p><a href="http://casy.cse.sc.edu/kite" target="_blank" rel="noopener noreferrer">Website</a> </p>  
+    <p><a href="http://casy.cse.sc.edu/kite" target="_blank" rel="noopener noreferrer">[Website]</a> </p>  
       <br>
     <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
   </div>
@@ -279,7 +279,7 @@ author_profile: true
   </div>
   <div style="flex:1">
     <h3 class="card-text">EDU Chatbot</h3>
-    <p><a href="http://casy.cse.sc.edu/chatbot_univ/" target="_blank" rel="noopener noreferrer">Website</a> </p>  
+    <p><a href="http://casy.cse.sc.edu/chatbot_univ/" target="_blank" rel="noopener noreferrer">[Website]</a> </p>  
       <br>
     <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
   </div>
@@ -294,7 +294,7 @@ author_profile: true
   </div>
   <div style="flex:1">
     <h3 class="card-text">ElectionBot for South Carolina</h3>
-    <p><a href="http://casy.cse.sc.edu/Election-Chatbot-SC-main/" target="_blank" rel="noopener noreferrer">Website</a> </p>  
+    <p><a href="http://casy.cse.sc.edu/Election-Chatbot-SC-main/" target="_blank" rel="noopener noreferrer">[Website]</a> </p>  
       <br>
     <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
   </div>
@@ -308,7 +308,7 @@ author_profile: true
   </div>
   <div style="flex:1">
     <h3 class="card-text">ElectionBot for Mississippi </h3>
-    <p><a href="http://casy.cse.sc.edu/ElectionBot-MS-main/Chatbot/" target="_blank" rel="noopener noreferrer">Website</a> </p>  
+    <p><a href="http://casy.cse.sc.edu/ElectionBot-MS-main/Chatbot/" target="_blank" rel="noopener noreferrer">[Website]</a> </p>  
       <br>
     <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
   </div>
@@ -322,7 +322,8 @@ author_profile: true
  </div>
  <div style="flex:1">
    <h3 class="card-text">Plansformer Tool: Demonstrating Generation of Symbolic Plans using Transformers, 2023</h3>
-   <p><b>Paper:</b> <a href="https://arxiv.org/abs/2212.08681" target="_blank" rel="noopener noreferrer">Plansformer Tool: Demonstrating Generation of Symbolic Plans using Transformers</a> </p> 
+   <p></p>
+   <a href="https://arxiv.org/abs/2212.08681" target="_blank" rel="noopener noreferrer">[Paper]</a>
    
   </div>
 </div>
