--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -322,7 +322,7 @@ author_profile: true
  </div>
  <div style="flex:1">
    <h3 class="card-text">Plansformer Tool: Demonstrating Generation of Symbolic Plans using Transformers, 2023</h3>
-   <p></p>
+   <p>We introduce Plansformer; an LLM fine-tuned on planning problems and capable of generating plans with favorable behavior in terms of correctness and length with reduced knowledge-engineering efforts.</p>
    <a href="https://arxiv.org/abs/2212.08681" target="_blank" rel="noopener noreferrer">[Paper]</a>
    
   </div>
