--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -334,7 +334,8 @@ author_profile: true
    </div>
    <div style="flex:1">
      <h3 class="card-text">Solving the Rubik's Cube with a PDDL Planner, 2023</h3>
-     <p><b>Paper:</b> <a href="https://www.researchgate.net/publication/362555735_Solving_the_Rubik%27s_Cube_with_a_PDDL_Planner" target="_blank" rel="noopener noreferrer">Solving the Rubik's Cube with a PDDL Planner, 2023</a> </p> 
+     <p>We introduce Plansformer; an LLM fine-tuned on planning problems and capable of generating plans with favorable behavior in terms of correctness and length with reduced knowledge-engineering efforts.</p>
+     <a href="https://www.researchgate.net/publication/362555735_Solving_the_Rubik%27s_Cube_with_a_PDDL_Planner" target="_blank" rel="noopener noreferrer">[Paper]</a>
    <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
  </div>
 </div>
