--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -252,7 +252,7 @@ author_profile: true
              </div>
              <div style="flex:1">
                <h3 class="card-text">ALLURE: A Multi-modal Guided Environment for Helping Children Learn to Solve a Rubik’s Cube. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
-               <p>Modern artificial intelligence (AI) methods have been used to solve problems that many humans struggle to solve. This opens up new opportunities for knowledge discovery and education. We demonstrate ALLURE, an educational AI system for learning to solve the Rubik’s cube that is designed to help students improve their problem solving skills.</p>
+               <p>We demonstrate ALLURE, an educational AI system for learning to solve the Rubik’s cube that is designed to help students improve their problem solving skills.</p>
                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21722" target="_blank" rel="noopener noreferrer">[Paper]</a>
              </div>
            </div>
@@ -334,7 +334,7 @@ author_profile: true
    </div>
    <div style="flex:1">
      <h3 class="card-text">Solving the Rubik's Cube with a PDDL Planner, 2023</h3>
-     <p>We introduce Plansformer; an LLM fine-tuned on planning problems and capable of generating plans with favorable behavior in terms of correctness and length with reduced knowledge-engineering efforts.</p>
+     <p></p>
      <a href="https://www.researchgate.net/publication/362555735_Solving_the_Rubik%27s_Cube_with_a_PDDL_Planner" target="_blank" rel="noopener noreferrer">[Paper]</a>
    <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
  </div>
