--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -265,7 +265,9 @@ author_profile: true
   <div style="flex:1">
     <h3 class="card-text">KITE: An Unsupervised, Effective and Inclusive Approach for
       Textual Content Exploration</h3>
-    <p><a href="http://casy.cse.sc.edu/kite" target="_blank" rel="noopener noreferrer">[Website]</a> </p>  
+      <p>We present an unsupervised system, called KITE, for exploring textual data which can generate insights from a general as well as domaindependent perspective consisting of holistic views, entity-centric view, events view, domain-specific interpretation using industry taxonomies and a detailed full-text view transparently connecting the document to insight elements.</p>
+      <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>  
+    <a href="http://casy.cse.sc.edu/kite" target="_blank" rel="noopener noreferrer">[Website]</a>
       <br>
     <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
   </div>
