--- a/_pages/papers.html
+++ b/_pages/papers.html
@@ -16,6 +16,7 @@ author_profile: true
     <label for="search">Search:</label>
     <input type="text" id="search" onkeyup="filterPublications()">
     <ul id="publications">
+
       <li><a style="text-decoration: none;color: black;"><h3><span style="color:black">2023-1</span></h3>
         <span>Bharath Muppasani, Cheyyur Jaya Anand, Chinmayi Appajigowda, Biplav Srivastava, 
             Lokesh Johri, A Dataset and Baseline Approach for Identifying Usage States from 
@@ -30,6 +31,9 @@ author_profile: true
       <li><a style="text-decoration: none;color: black;"><h3><span style="color:black">2023-3</span></h3>
         <span>Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta, Advances in Automatically Rating the Trustworthiness of Text Processing Services, AAAI Spring Symposium, San Francisco, 2023 [AI Rating, Trust] - <a href="https://arxiv.org/pdf/2302.09079.pdf">[PDF]</a></span>
          </a></li>
+      <li><a style="text-decoration: none;color: black;"><h3><span style="color:black">2023-4</span></h3>
+          <span>Lakkaraju, Kausik, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath Muppasani, and Biplav Srivastava. "Can LLMs be Good Financial Advisors?: An Initial Study in Personal Decision Making for Optimized Outcomes." FinPlan 2023: 51, On Arxiv at: <a href="https://arxiv.org/abs/2307.07422">https://arxiv.org/abs/2307.07422</a> [LLM, Chatbot, Personal Finance] - <a href="https://arxiv.org/abs/2307.07422">[PDF]</a></span>
+           </a></li>
       <li><a style="text-decoration: none;color: black;"><h3><span style="color:black">2022-1</span></h3>
         <span>Kausik Lakkaraju, Vinamra Palaiyya, Sai Teja Paladi, Chinmayi Appajigowda, Biplav Srivastava, Lokesh Johri, Data-based Insights for the Masses: Scaling Natural Language Querying to Middleware Data", DASFAA-2022, (April 2022) [IoT - power and router usage] - <a href="https://vimeo.com/651270271">Video</a>, <a href="https://dl.acm.org/doi/abs/10.1007/978-3-031-00129-1_49">[PDF]</a></span>
          </a></li>
