--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -254,6 +254,8 @@ author_profile: true
                <h3 class="card-text">ALLURE: A Multi-modal Guided Environment for Helping Children Learn to Solve a Rubik’s Cube. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
                <p>We demonstrate ALLURE, an educational AI system for learning to solve the Rubik’s cube that is designed to help students improve their problem solving skills.</p>
                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21722" target="_blank" rel="noopener noreferrer">[Paper]</a>
+               <a href="https://www.youtube.com/embed/-0aKDVoEGvs" target="_blank">[Demo Video]</b></a>
+               <a href="../rubiks_cube/bib/allure_aaai.txt" target="_blank" type="text/plain">[BibTex]</a>
              </div>
            </div>
 <br>
