--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -240,7 +240,8 @@ author_profile: true
                <h3 class="card-text">PRUDENT: A Generic Dialog Agent for Information Retrieval Based on Automated Planning Within a Reinforcement Learning Platform. <font color=blue>(Neuro-Symbolic Methods)</font></h3>
                <p>We present a generic approach for dialogs for information retrieval based on automated planning within a reinforcement learning (RL)-based platform, ParlAI.</p>
                <a href="https://prl-theworkshop.github.io/prl2021/papers/PRL2021_paper_28.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>
-               <a href="https://github.com/ai4society/PRUDENT" target="_blank" rel="noopener noreferrer">[Github]</a>  
+               <a href="https://github.com/ai4society/PRUDENT" target="_blank" rel="noopener noreferrer">[Github]</a> 
+               <a href="../generalized_planning/bib/prudent_demo.txt" target="_blank" type="text/plain">[BibTex]</a> 
                <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
              </div>
            </div>
