--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -343,6 +343,7 @@ author_profile: true
      <h3 class="card-text">Solving the Rubik's Cube with a PDDL Planner, 2023</h3>
      <p>In this demonstration, we introduce the first PDDL formulation for the 3-dimension RC and solve it with an off-the-shelf Fast-Downward planner. We also create a plan executor and visualizer to show how the plan achieves the intended goal.</p>
      <a href="https://www.researchgate.net/publication/362555735_Solving_the_Rubik%27s_Cube_with_a_PDDL_Planner" target="_blank" rel="noopener noreferrer">[Paper]</a>
+     <a href="../rubiks_cube/bib/rubiks-pddl.txt" target="_blank" type="text/plain">[BibTex]</a> 
    <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
  </div>
 </div>
