--- a/teaming/index.html
+++ b/teaming/index.html
@@ -30,7 +30,7 @@
           </h2>
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span> -
             <span style="color:red; font-weight:bold;">Click <u><a target="_black"
-                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey. Feedback is being
+                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is being
               collected! [IRB# Pro00127449.]</span><br>
             <i><b>Team: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
             <br>
@@ -62,6 +62,16 @@
             and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
           <p><i><b>Representative Publications</b></i></p>
           <ul>
+            <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals
+              <br><i>arxiv Preprint</i><br>
+
+              <b>[Tool Website at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b> 
+              <b>[Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>, <a href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]</b> 
+              <a href="https://arxiv.org/abs/2309.09404" target="_blank"><b>[Paper]</b></a>
+              <a href="./bib/ultra-2.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <br>
+            </li>
+            <br>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
               <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
 
