updated demo page

--- a/_pages/demos.html
+++ b/_pages/demos.html
@@ -319,7 +319,7 @@ author_profile: true
   <div style="flex:1">
     <h3 class="card-text">ElectionBot for Mississippi </h3>
     <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12109" target="_blank" rel="noopener noreferrer">[Paper]</a>
-    <p><a href="http://casy.cse.sc.edu/ElectionBot-MS-main/Chatbot/" target="_blank" rel="noopener noreferrer">[Website]</a> </p>  
+    <p><a href="http://casy.cse.sc.edu/ElectionBot-MS-main/Chatbot/" target="_blank" rel="noopener noreferrer">[Tool]</a> </p>  
     <a href="../rating_page/bib/SafeChat_AI_Mag.txt" target="_blank" type="text/plain">[BibTex]</a>     
     <br>
     <!-- <p><b>Keywords :</b> #NSF, #COVID19, #Social_Impact, #Psychological_Impact, #Addiction, #Mental_Health, #Social_Quality_Index</p> -->
