--- a/teaming/index.html
+++ b/teaming/index.html
@@ -30,15 +30,21 @@
           </h2>
           <p style="text-align: justify;"><span style="background-color: aqua;"><b>Team Recommendation</b></span> -
             <span style="color:red; font-weight:bold;">Click <u><a target="_black"
-                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is being
-              collected! [IRB# Pro00127449.]</span><br>
-            <i><b>Team: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta, Biplav Srivastava, Tarmo Koppel</i>
-            <br>
-            <i><b>Investigators: </b><a target="_blank"
-                href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a
-                target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a></i>
-            <br>
-            <i><b>Advisors: </b><a target="_blank"
+                  href="http://casy.cse.sc.edu/ultra/teaming/">HERE</a></u> to take part in survey at UofSC. Feedback is being collected! [IRB# Pro00127449.]</span><br>
+            <hr>
+            <ul>
+              <li><i><b>Technical Lead: </b><a target="_blank"
+                href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a></i></li>
+              <li><i><b>Collaborators over the years: </b>Siva Likitha Valluru, Sai Teja Paladi, Aniket Gupta</i></li>
+            <li>
+              <i><b>External Collaborators: </b>
+                <a target="_blank" href="https://dtrycode.github.io/">Siwen Yan</a>, 
+                <a target="_blank" href="https://personal.utdallas.edu/~sriraam.natarajan/">Sriraam Natarajan</a>, 
+                <a target="_blank" href="https://www.researchgate.net/profile/Tarmo-Koppel">Tarmo Koppel</a>, 
+                <a target="_blank" href="https://www.iitr.ac.in/~CSE/Gangopadhyay_Sugata">Sugata Gangopadhyay</a>
+              </i>
+            </li>
+            <li><i><b>Advisors: </b><a target="_blank"
                 href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/matthews.php">Michael
                 Matthews</a>, <a target="_blank"
                 href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/ziehl_paul.php">Paul
@@ -46,8 +52,8 @@
                 href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/michaelhuhns.php">Michael
                 Huhns</a>, <a target="_blank"
                 href="https://sc.edu/study/colleges_schools/engineering_and_computing/faculty-staff/mcelwain.php">Danielle
-                McElwain</a></i>
-            <br>
+                McElwain</a></i></li>
+          </ul>  
             We introduce ULTRA (<b><u>U</u></b>niversity <b><u>L</u></b>ead <b><u>T</u></b>eam <b><u>B</u></b>uilder
             from <b><u>R</u></b>FPs and <b><u>A</u></b>nalysis), an emerging AI-based approach and prototype system for
             assisting team formation when
@@ -60,12 +66,16 @@
           </p>
           <p style="color:blue">This research study has been certified as exempt from the IRB per 45 CFR 46.104(d)(3)
             and 45 CFR 46.111(a)(7) by University of South Carolina IRB# Pro00127449.</p>
+          
+          
+          <hr>
+
           <p><i><b>Representative Publications</b></i></p>
           <ul>
             <li>[2023] Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals
               <br><i>arxiv Preprint</i><br>
 
-              <b>[Tool Website at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b> 
+              <b>[Tool Websites at <a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank">UofSC</a>, <a href="http://casy.cse.sc.edu/ultra/iitr/" target="_blank">IIT-R</a>]</b> 
               <b>[Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>, <a href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]</b> 
               <a href="https://arxiv.org/abs/2309.09404" target="_blank"><b>[Paper]</b></a>
               <a href="./bib/ultra-2.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
